--- a/css/index.css
+++ b/css/index.css
@@ -1,43 +1,104 @@
+body{
+    background-color: aliceblue;
+}
+p{
+    font-size: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+}
+
+@media only screen and (min-width: 768px){
 .grid-container{
     display: grid;
     grid-template-columns: auto auto auto;
-    grid-template-rows: 4fr 4fr 4fr;
-    gap: 10px;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    gap: 20px;
     padding: 10px;
     margin-left: 100px;
     margin-right: 100px;
 }
   
 .haszn{
-    border: 2px solid black;
+    border-radius: 10px;
+    border-top: 3px solid blue;
 }
 
 img{
     display: block;
-    margin-left: auto;
+    margin-left: 470px;
+    margin-top: 170px;
 }
 
 article{
-    border: 4px solid black;
     text-align: center;
+    height: 300px;
+    background-color: white;
 }
 
-article:nth-of-type(4){
+article:nth-of-type(2){
     grid-column: 1;
     grid-row: 2 / span 2;
 }
 
-article:nth-of-type(2){
+article:nth-of-type(1){
     grid-row: 1 / span 2;
     grid-column: 2;
 }
 
-article:nth-of-type(6){
+article:nth-of-type(4){
     grid-row: 3 / span 2;
     grid-column: 2;
 }
 
-article:nth-of-type(5){
+article:nth-of-type(3){
     grid-column: 3;
     grid-row: 2 / span 2;
+}
+
+}
+
+@media only screen and (max-width: 768px){
+    .grid-container{
+        grid-template-columns: auto;
+        grid-template-rows: 1fr 1fr 1fr 1fr;
+        gap: 15px;
+        padding: 10px;
+    }
+    .haszn{
+        border-top: 3px solid blue;
+        border-radius: 10px;
+        margin-top: 10px;
+    }
+    
+    img{
+        display: block;
+        margin-left: auto;
+        margin-top: 170px;
+    }
+    
+    article{
+        text-align: center;
+        height: 300px;
+        background-color: white;
+    }
+
+    article:nth-of-type(1){
+        grid-column: 1;
+        grid-row: 3 / span 2;
+    }
+    
+    article:nth-of-type(2){
+        grid-row: 1 / span 2;
+        grid-column: 1;
+    }
+    
+    article:nth-of-type(3){
+        grid-row: 7 / span 2;
+        grid-column: 1;
+    }
+    
+    article:nth-of-type(4){
+        grid-column: 1;
+        grid-row: 5 / span 2;
+    }
 }
